# gnosis-vpn-client-system-service

./: .coderabbit.yaml  .envrc  .gitignore  Cargo.toml  ONBOARDING-LINUX.md  ONBOARDING-MACOS.md  ONBOARDING-OSX.md  ONBOARDING.md  README  README.md  config.toml  documented-config.toml  flake.nix  minimal-config.toml  sample.config.toml  shell.nix
.cargo/: config.toml
.github/workflows/: build-binaries.yaml  build.yml  merge.yaml  release.yaml  rust.yml
gnosis-vpn/: Cargo.toml
gnosis-vpn-ctl/: Cargo.toml
gnosis-vpn-ctl/src/: cli.rs  lib.rs  main.rs
gnosis-vpn-lib/: Cargo.toml
gnosis-vpn-lib/src/: command.rs  config.rs  dirs.rs  error.rs  lib.rs  log_output.rs  peer_id.rs  socket.rs  state.rs  utils.rs
gnosis-vpn-lib/src/wireguard/: kernel.rs  mod.rs  tooling.rs  userspace.rs
gnosis-vpn/src/: backoff.rs  core.rs  entry_node.rs  event.rs  exit_node.rs  lib.rs  main.rs  remote_data.rs  session.rs  state.rs
gnosis-vpn/src/core/: error.rs
gnosis-vpn/src/task/: mod.rs
gnosis-vpn/src/wireguard/: kernel.rs  mod.rs  tooling.rs  userspace.rs
gnosis_vpn/: Cargo.toml
gnosis_vpn-ctl/src/: cli.rs
gnosis_vpn-lib/: Cargo.toml
gnosis_vpn-lib/src/: config.rs  lib.rs  socket.rs
gnosis_vpn-lib/src/wireguard/: kernel.rs  mod.rs  tooling.rs
gnosis_vpn/src/: backoff.rs  core.rs  entry_node.rs  exit_node.rs  main.rs  session.rs
nix/: rust-builder.nix  rust-package.nix  shell.nix
src/: main.rs
