[workspace]
members = ["gnosis-vpn", "gnosis-vpn-ctl", "gnosis-vpn-lib"]
resolver = "2"

[workspace.package]
version = "0.3.1"
edition = "2021"
name = "gnosis-vpn"

[workspace.dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
bincode = { version = "1.3.3" }
clap = { version = "4.5.18", features = ["derive"] }
crossbeam-channel = "0.5.13"
ctrlc = "3.4.5"
directories = { version = "5.0.1" }
exitcode = "1.1.2"
exponential-backoff = "2.0.0"
humantime = "2.1.0"
libp2p-identity = { version = "0.2.10", features = ["ed25519", "peerid"] }
notify = { version = "6.1.1", features = ["serde"] }
rand = { version = "0.8.5" }
reqwest = { version = "0.12.9", features = ["json", "blocking"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
thiserror = "1.0.69"
toml = "0.8.19"
tracing = "0.1.41"
tracing-subscriber = "0.3.18"
url = { version = "2.5.4", features = ["serde"] }
# use exclusively because it supports command chaining
bpaf = { version = "0.9.15", features = ["autocomplete", "derive"] }

gnosis-vpn-lib = { path = "gnosis-vpn-lib" }
