[workspace]
members = ["gnosis_vpn", "gnosis_vpn-ctl", "gnosis_vpn-lib"]
resolver = "2"

[workspace.package]
version = "0.7.0"
edition = "2021"
name = "gnosis_vpn"

[workspace.dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
bincode = { version = "1.3" }
clap = { version = "4.5", features = ["derive"] }
crossbeam-channel = "0.5"
ctrlc = { version = "3.4", features = ["termination"] }
directories = { version = "5.0" }
exitcode = "1.1"
exponential-backoff = "2.0"
humantime = "2.1"
libp2p-identity = { version = "0.2", features = ["ed25519", "peerid"] }
notify = { version = "6.1", features = ["serde"] }
rand = { version = "0.8" }
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
url = { version = "2.5", features = ["serde"] }
# use exclusively because it supports command chaining
bpaf = { version = "0.9", features = ["autocomplete", "derive"] }

gnosis_vpn-lib = { path = "gnosis_vpn-lib" }
