[package]
name = "gnosis-vpn-ctl"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
gnosis-vpn-lib = { workspace = true }
libp2p-identity = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }
bpaf = { workspace = true }
