[package]
name = "gnosis-vpn-lib"
version = { workspace = true }
edition = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = { workspace = true }
directories = { workspace = true }
libp2p-identity = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
humantime = { workspace = true }
