[package]
name = "gnosis-vpn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = {workspace = true}
clap = { version = "4.5.18", features = ["derive"] }
crossbeam-channel = "0.5.13"
ctrlc = "3.4.5"
exponential-backoff = "2.0.0"
gnosis-vpn-lib = { version = "0.1.0", path = "../gnosis-vpn-lib" }
libp2p-identity = {workspace = true}
reqwest = { version = "0.12.9", features = ["json", "blocking"] }
serde = {workspace = true}
serde_json = {workspace = true}
tracing = {workspace = true}
tracing-subscriber = {workspace = true}
url = {workspace = true}
