[package]
name = "gnosis-vpn"
version = { workspace = true }
edition = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
exitcode = { workspace = true }
gnosis-vpn-lib = { workspace = true }
libp2p-identity = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }

anyhow = { version = "1.0", features = ["backtrace"] }
clap = { version = "4.5.18", features = ["derive"] }
crossbeam-channel = "0.5.13"
ctrlc = "3.4.5"
exponential-backoff = "2.0.0"
notify = { version = "6.1.1", features = ["serde"] }
reqwest = { version = "0.12.9", features = ["json", "blocking"] }
