[package]
name = "gnosis-vpn"
version = { workspace = true }
edition = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
exitcode = { workspace = true }
gnosis-vpn-lib = { workspace = true }
libp2p-identity = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
crossbeam-channel = { workspace = true }
ctrlc = { workspace = true }
exponential-backoff = { workspace = true }
notify = { workspace = true }
reqwest = { workspace = true }
