[package]
name = "gnosis_vpn"
version = { workspace = true }
edition = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
crossbeam-channel = { workspace = true }
ctrlc = { workspace = true }
exitcode = { workspace = true }
exponential-backoff = { workspace = true }
gnosis_vpn-lib = { workspace = true }
libp2p-identity = { workspace = true }
notify = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }
